[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Textures/title.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Big_UI.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Controllers/Opening_Title.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Cardboard-Cutout.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0.196078 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=8]
size = 200
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.196078 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0.196078 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=7]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Opening_Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
margin_bottom = 210.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -304.0
margin_right = 350.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 700.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 200 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="Buttons"]
margin_top = 204.0
margin_right = 700.0
margin_bottom = 404.0
rect_min_size = Vector2( 700, 200 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/ControlsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 408.0
margin_right = 700.0
margin_bottom = 608.0
rect_min_size = Vector2( 400, 200 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_display" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackButton" type="Button" parent="Button_display"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -200.0
margin_right = 350.0
rect_min_size = Vector2( 400, 200 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button_display/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.52588e-05
custom_fonts/font = ExtResource( 2 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button_display"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.5
margin_top = -126.0
margin_right = 247.5
margin_bottom = 126.0
custom_fonts/font = SubResource( 7 )
text = "You are runing out of time. Keep collecting hour glasses  to  replenish your time. 

They spawn  randomly around  the  map

Also avoid getting shot"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Button_display/BackButton" to="." method="_on_BackButton_pressed"]
